# trabalho-final-banco-de-dados

./: .gitignore  LICENSE  README  README.md  doencas.txt  tables.py  test.sql
app/: CMakeLists.txt  app  consulta_doencas.sql
app/include/: data_fetcher.h  data_manager.h  report.h  util.h
app/src/: app  data_fetcher.c  data_manager.c  main.c  report.c  util.c
codigo-fonte/include/: data_fetcher.h  data_manager.h  util.h
codigo-fonte/src/: data_manager.c  report.c
queries/: 05-consultas.sql
scripts/: 03-esquema.sql  04-dados.sql  05-consultas.sql
